# portfolio-backend-rs

./: Cargo.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/auth/: google.rs  middleware.rs  mod.rs  user.rs
src/models/: about.rs
src/routes/: mod.rs
src/routes/v1/: about.rs  mod.rs
src/services/: about_service.rs  mod.rs  prelude.rs
tests/: about_routes.rs
